# sentinel

./: .gitignore
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b02bf2d84519_create_initial_tables.py
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  prompts.py  state.py
backend/app/api/: auth.py  deps.py  incidents.py  webhooks.py
backend/app/core/: approval_tokens.py  config.py  db.py  embedding.py  llm.py  logging.py  queue.py  security.py  tracing.py
backend/app/eval/: incidents.json  run_eval.py
backend/app/jobs/: diagnose.py
backend/app/models/: __init__.py  approval.py  audit_log.py  diagnosis.py  evidence.py  incident.py  incident_memory.py  user.py
backend/app/schemas/: diagnosis.py
backend/app/tools/read/: deploys.py  ecs_events.py  logs.py  memory.py  metrics.py
backend/app/worker/: main.py
backend/scripts/: create_user.py  send_test_webhook.py
backend/tests/: conftest.py  test_agent.py  test_auth.py  test_diagnosis_schema.py  test_health.py  test_webhooks.py
infra/terraform/: ecs.tf  iam.tf  main.tf  network.tf  outputs.tf  variables.tf
